# remla-project

./: .flake8  .gitignore  .pylintrc  Dockerfile  README.md  data.dvc  deployment.md  docker-compose.yml  dvc.yaml  main.py  mypy.ini  nginx.conf  params.yaml  requirements.txt  requirements_dev.txt  setup.cfg
.dvc/: config
.github/workflows/: codeql-analysis.yml  dependency-check.yml  import-order-check.yml  lint-ds.yml  lint-flake8.yml  lint-ml.yml  publish.yml  run-tests.yml  security-check.yml  tests.yml  type-check.yml
assets/: .gitignore  metrics.json
assets/data/: raw.dvc
assets/metrics/: bag-of-words_metrics.json  tf-idf_metrics.json
assets/models/: .gitignore
assets/outputs/: .gitignore
deployment/: canary.yaml  deployment.md  deployment.yaml  deployment.yml  hpa.yaml  ingress.yaml  metric.yaml  service.yaml
generator/: Dockerfile  generate_events.py
grafana/: config.ini
grafana/dashboards/: examples.json
html/: index.html
k8s/: canary.yaml  deployment.yaml  grafana.yaml  hpa.yaml  ingress.yaml
notebooks/: stack_overflow_tag_prediction.ipynb
src/: config.py  evaluate.py  prepare.py  preprocessing.py  serve_model.py  train.py
src/data/: preprocessing.py
src/model/: bag_model.py  bag_of_words.py  base_model.py  corpus_counts.py  evaluate.py  evaluation.py  mlb.py  mybag_model.py  preprocessing.py  tf_idf.py  tfidf_model.py
src/models/: bag_model.py
src/remla/: evaluate.py  train.py  (+2 more)
test/: test_bag_of_words.py  test_preprocessing.py
tests/: test_bag_of_words.py  test_preprocessing.py  test_validate_schema.py
tools/: format.sh
(+7 files in other folders)
