[metadata]
name = remla-project
version = 0.0.1
author = Florentin Arsene, Douwe den Blanken, Alin Dondera, Wander Siemers
description = ML project for the REMLA course
long_description = Simple ML project used for the Release Engineering for Machine Learning Applications MSc course taught at Delft University of Technology
keywords = remla, machine learning, release engineering, k8s, docker, ml

[options]
python_requires = >=3.9
install_requires = 
    numpy==1.21.6
    pandas==1.4.2
    nltk==3.6.1
    scipy==1.8.1
    scikit-learn==1.1.1
    joblib==1.1.0
    transformers==4.19.3
    flask==2.1.2
    prometheus_flask_exporter==0.20.1
    flasgger==0.9.5

package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
extra = 
    mllint[tools]
    flake8
    dslinter
    mypy
    pylint
    docformatter
    black
    pytest
    dvc
    dvc[gdrive]
    wandb
    tensorflow-data-validation
